# TR-LfD

./: CMakeLists.txt  README.md  package.xml
TR-LfD/itbn_model/input/: wave_reference_frame.npy
TR-LfD/itbn_model/src/: itbn_executor.cpp
TR-LfD/itbn_model/src/itbn_classifier/aud_classifier/: aud_classifier.py
TR-LfD/itbn_model/src/itbn_classifier/common/: itbn_cnn_model_validator.py  itbn_pipeline.py  itbn_tfrecord_rw.py
TR-LfD/itbn_model/src/itbn_classifier/tools/: frame_params_explorer.py  obs_labels_generator.py  rosbag_to_png_output.py
include/itbn_lfd/: itbn_executor.h
input/: itbn.nx
itbn_lfd/itbn_model/include/itbn_lfd/: executor.h
itbn_lfd/itbn_model/input/: noise1.npy  noise2.npy
itbn_lfd/itbn_model/src/: main.cpp
itbn_lfd/itbn_model/src/itbn_classifier/aud_classifier/: aud_trainer.py  aud_validator.py
itbn_lfd/itbn_model/src/itbn_classifier/common/: itbn_model_tester.py  itbn_trainer.py  itbn_validator.py
launch/: itbn_lfd.launch  nao_bringup.launch
pgmpy/base/: DirectedGraph.py
pgmpy/estimators/: BayesianEstimator.py  HillClimbSearchDBN.py  HillClimbSearchITBN.py  MLE.py  __init__.py  base.py
pgmpy/factors/: base.py
pgmpy/factors/discrete/: DiscreteFactor.py
pgmpy/inference/: ExactInference.py  base.py  dbn_inference.py
pgmpy/models/: BayesianModel.py  DynamicBayesianNetwork.py  IntervalTemporalBayesianNetwork.py  MarkovModel.py  __init__.py
src/: executor.cpp  itbn_action_selector.py
src/itbn_classifier/common/: constants.py
src/itbn_classifier/tools/: generate_itbn_tfrecords.py
srv/: ITBNGetNextAction.srv
(+6 files in other folders)
